--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
-    "core-js": "^3.8.3",
+    "core-js": "^3.38.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13",
-    "vuedraggable": "^2.24.3"
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
+    "@types/sortablejs": "^1.15.8",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-service": "~5.0.0"
   }
